--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-work-sans-font{
+.work-sans-font{
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+}
+/* Share styles */
+.display-flex{
+    display: flex;
+}
+
+.btn-primary{
+    border-radius: 8px;
+background-color: rgb(255, 144, 14);
+color: white;
+padding: 20px 25px;
+font-size: 1.25rem;
+font-weight: 600;
+border: none;
+}
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+/* Dark 02 */
+.text-gray{
+    color: #424242;
+}
+/* Dark 03 */
+.text-light-gray{
+    color: #727272;
+}
+
+/* NavBar Related Styles */
+.navbar{
+   justify-content: space-between;
+   align-items: center;
+}
+.brand{
+    color: rgb(19, 19, 19);
+font-family: Work Sans;
+font-size: 3rem; 
+/* 1 rem = 16px */
+font-weight: 700;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+.navbar , .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+/* banner style */
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+   
+    /* margin-bottom: 50px; */
+}
+
+.banner-title{
+    color: rgb(19, 19, 19);
+font-size: 4rem;
+font-weight: 700;
+}
+.banner-description{
+    color: rgb(114, 114, 114);
+font-size: 1rem;
+font-weight: 400;
+}
+.banner-image{
+    width: 100%;
+}
+/* Responsive media query */
+@media screen and (max-width: 576px) {
+    .navbar ,.nav-links{
+        flex-direction: column;
+    }
 }
