--- a/styles/style.css
+++ b/styles/style.css
@@ -20,8 +20,18 @@ font-size: 1.25rem;
 font-weight: 600;
 border: none;
 }
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px;
+}
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
+}
+.text-primary{
+    color:  rgb(255, 144, 14);;
 }
 /* Dark 02 */
 .text-gray{
@@ -79,9 +89,49 @@ font-weight: 400;
 .banner-image{
     width: 100%;
 }
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+   display: grid; 
+   grid-template-columns: repeat(2,1fr);
+   gap: 24px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+.feature-title{
+    font-size: 2.8rem;
+}
+#quick-list{
+    font-weight: 500;
+}
+.margin{
+    margin-top: 10px;
+}
 /* Responsive media query */
 @media screen and (max-width: 576px) {
-    .navbar ,.nav-links{
+    .navbar ,
+    .nav-links,
+    .teams{
         flex-direction: column;
     }
+    .team-img-container{
+        grid-template-columns: repeat(1 , 1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+}
+/* Medium size device */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin: 50px auto;
+    }
+    
 }
