--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,14 @@
 .display-flex{
     display: flex;
 }
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
 
 .btn-primary{
     border-radius: 8px;
-background-color: rgb(255, 144, 14);
+background-color: #ff900e;
 color: white;
 padding: 20px 25px;
 font-size: 1.25rem;
@@ -102,15 +106,43 @@ font-weight: 400;
     margin-left: 130px;
     max-width: 530px;
 }
-.feature-title{
-    font-size: 2.8rem;
-}
+
 #quick-list{
     font-weight: 500;
 }
 .margin{
     margin-top: 10px;
 }
+/* Some FActs Related styles */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+
+}
+.fact-card{
+    border: 1px solid #ff900e;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.facts-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.fact-description{
+    max-width: 540px;
+}
+
 /* Responsive media query */
 @media screen and (max-width: 576px) {
     .navbar ,
