Sponsors Section added

--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,24 @@ font-weight: 400;
 .fact-description{
     max-width: 540px;
 }
+ /* Sponsors Related Style */
+ .sponsor-info{
+    max-width: 540px; 
+    margin: 50px auto;
+    text-align: center;
+    
+ }
+ .sponsor-companies{
+
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+ }
+
+ .sponsor-companies img{
+    filter: grayscale(100%);
+ }
+
+ /* -----------------Responsive area here--------------*/
 
 /* Responsive media query */
 @media screen and (max-width: 576px) {
@@ -150,12 +168,26 @@ font-weight: 400;
     .teams{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container,
+    .facts-container,
+    .sponsor-companies
+    {
         grid-template-columns: repeat(1 , 1fr);
     }
     .our-features{
         margin-left: 20px;
     }
+    .facts-container,
+    .sponsor-companies{
+        justify-items: center;
+        gap: 24px;
+    }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
+    }
+  
+   
 }
 /* Medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
@@ -164,6 +196,10 @@ font-weight: 400;
     }
     .our-features{
         margin: 50px auto;
+    }
+    .sponsor-companies,.facts-container{
+       grid-template-columns: repeat(2, 1fr);
+       gap: 50px;
     }
     
 }
