--- a/styles/style.css
+++ b/styles/style.css
@@ -113,6 +113,43 @@ font-weight: 400;
 .margin{
     margin-top: 10px;
 }
+/* feature Section Related style */
+.features{
+gap: 140px;
+}
+#feature-section-title{
+    border-left: 5px solid rgb(255, 144, 14);
+    padding: 20px;
+}
+
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    
+}
+#ex-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#ex-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.feature-card{
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+}
+.feature-architect img{
+width: 100%;
+}
+
+
+
 /* Some FActs Related styles */
 .facts-container{
     display: grid;
@@ -159,13 +196,15 @@ font-weight: 400;
     filter: grayscale(100%);
  }
 
+
  /* -----------------Responsive area here--------------*/
 
 /* Responsive media query */
 @media screen and (max-width: 576px) {
     .navbar ,
     .nav-links,
-    .teams{
+    .teams,
+    .features{
         flex-direction: column;
     }
     .team-img-container,
@@ -185,6 +224,10 @@ font-weight: 400;
     .sponsor-companies{
         justify-items: center;
         gap: 50px;
+    }
+    #ex-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
   
    
